--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "lora-proxy"
 version = "0.1.0"
+edition = "2021"
 authors = ["g.pillon"]
 description = "Cross-platform multi-client UDP proxy"
 homepage = "https://github.com/neosmart/udpproxy"
@@ -22,6 +23,12 @@ base64 = "0.13.0"
 dotenv = { version="0.15.0",git="https://github.com/dotenv-rs/dotenv"}
 rumqttc = "0.17.0"
 hex = "0.4"
+tonic = "0.9.2"
+prost = "0.11"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+
+[build-dependencies]
+tonic-build = "0.9"
 
 [target.x86_64-unknown-linux-musl]
 rustflags = ["-C", "linker-flavor=ld.lld"]
