--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ hex = "0.4"
 tonic = "0.9.2"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+p256 = { version = "0.13.2", features = ["ecdh"] }
 
 [build-dependencies]
 tonic-build = "0.9"
