--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tonic = "0.9.2"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 p256 = { version = "0.13.2", features = ["ecdh"] }
+local-ip-address = "0.5.4"
 
 [build-dependencies]
 tonic-build = "0.9"
