ADD rpc endpoint env vars
Signed-Off-By: Stefano Milani <milani@diag.uniroma1.it>

--- a/env.sample
+++ b/env.sample
@@ -18,3 +18,7 @@ BROKER_PORT = 1885
 BROKER_AUTH_USERNAME = username
 BROKER_AUTH_PASSWORD = password
 BROKER_TOPIC = /edge2lora/topic
+
+# EDGE2LORA
+RPC_DM_REMOTE_HOST=<distributed_module_ip>
+RPC_DM_REMOTE_PORT=<distrubuted_module_rpc_endpoint_port>
