--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 p256 = { version = "0.13.2", features = ["ecdh"] }
 local-ip-address = "0.5.4"
 sha2 = "0.10.7"
+sysinfo = "0.29.10"
 
 [build-dependencies]
 tonic-build = "0.9"
