--- a/env.sample
+++ b/env.sample
@@ -22,3 +22,6 @@ BROKER_TOPIC = /edge2lora/topic
 # EDGE2LORA
 RPC_DM_REMOTE_HOST=<distributed_module_ip>
 RPC_DM_REMOTE_PORT=<distrubuted_module_rpc_endpoint_port>
+
+# Device list 
+DEVICE_LIST_FILENAME='src/devices.json'
