--- a/env.sample
+++ b/env.sample
@@ -3,6 +3,9 @@ AGENT_BIND_ADDR = 0.0.0.0
 #UDP PORT
 AGENT_PORT = 1680
 
+# GW RPC PORT
+GW_RPC_ENDPOINT_PORT=<gw_rpc_endpoint_port> # DEFUALT: 50052
+
 #Network bridge access
 NB_PORT = 1680
 NB_HOST = <host> # IP ADDR or HostName (pub interface no loopback)
