ADD LOGS IGNORE AND PERIODIC FRAMES STATS
- From the .env file you can now set the IGNORE_LOGS var to
    avoid to send a logs for each received LoRAWAN packet.
- Add a thread that every 5 seconds sends new frames stats to sink

Signed-Off-By: Stefano Milani <milani@diag.uniroma1.it>

--- a/env.sample
+++ b/env.sample
@@ -28,3 +28,6 @@ RPC_DM_REMOTE_PORT=<distrubuted_module_rpc_endpoint_port>
 
 # Device list 
 DEVICE_LIST_FILENAME='src/devices.json'
+
+# Ignore per packets logs in case of big deployments. 1 to ignore, 0 otherwise.
+IGNORE_LOGS=0
