--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ p256 = { version = "0.13.2", features = ["ecdh"] }
 local-ip-address = "0.5.4"
 sha2 = "0.10.7"
 sysinfo = "0.29.10"
+paho-mqtt = "0.12.3"
 
 [build-dependencies]
 tonic-build = "0.9"
