ADD mqtt client and publish on topic
Signed-Off-By: Stefano Milani <milani@diag.uniroma1.it>

--- a/env.sample
+++ b/env.sample
@@ -14,10 +14,12 @@ NB_HOST = <host> # IP ADDR or HostName (pub interface no loopback)
 FILE_AND_PATH = src/filters.json
 #debug mode
 DEBUG = true
-MQTT = false
-#Mqtt Broker access
+
+
+# GW MQTT Broker access
 BROKER_URL = 127.0.0.1
-BROKER_PORT = 1885
+BROKER_PORT = 1883
+BROKER_QOS=1
 BROKER_AUTH_USERNAME = username
 BROKER_AUTH_PASSWORD = password
 BROKER_TOPIC = /edge2lora/topic
